let's call it a day

--- a/index.html
+++ b/index.html
@@ -48,6 +48,36 @@
           </div>
         </div>
 
+        <!-- This is used as template, it will be portalled to inside "main" using JS -->
+        <article
+          id="gritude-template"
+          class="gritude template"
+          style="display: none"
+        >
+          <div class="gritude-header">
+            <!-- <div
+        style="
+          width: 3rem;
+          height: 3rem;
+          background-color: black;
+          border-radius: 100%;
+        "
+      ></div> -->
+            <div id="emojitude">🤣</div>
+
+            <div class="gratitude-title">
+              <h2 id="gritude-date">Jan 5th, 2022</h2>
+              <p id="radness-desc">It was rad!</p>
+            </div>
+          </div>
+          <div id="bq-prof">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit ex
+            quia saepe explicabo dolore! Eaque maiores deleniti autem iure
+            laboriosam aut possimus aperiam perferendis atque, corporis tenetur
+            ea repellendus! Laudantium.
+          </div>
+        </article>
+
         <!-- <article>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit ex quia
           saepe explicabo dolore! Eaque maiores deleniti autem iure laboriosam
@@ -80,31 +110,6 @@
         </blockquote>
       </aside>
     </main>
-
-    <article id="gritude-template" class="gritude template" style="display: none">
-      <div class="gritude-header">
-        <!-- <div
-          style="
-            width: 3rem;
-            height: 3rem;
-            background-color: black;
-            border-radius: 100%;
-          "
-        ></div> -->
-        <div id="emojitude">🤣</div>
-
-        <div class="gratitude-title">
-          <h2 id="gritude-date">Jan 5th, 2022</h2>
-          <p id="radness-desc">It was rad!</p>
-        </div>
-      </div>
-      <div id="bq-prof" >
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit ex quia
-        saepe explicabo dolore! Eaque maiores deleniti autem iure laboriosam aut
-        possimus aperiam perferendis atque, corporis tenetur ea repellendus!
-        Laudantium.
-      </div>
-    </article>
 
     <footer>&copy; Hari Anugrah</footer>
   </body>
