--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="assets/img/app-icon.png">
     <title>Daily Gratitude</title>
 
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -16,6 +17,7 @@
         <div class="nav-header">
           <h3>Gratitude Daily</h3>
           <div id="account-avatar">
+            <img class="icon-dropdown" src="assets/img/app-icon.png" alt="" srcset="">
             <ul id="dropdown">
               <li><a href="#">Profile</a></li>
               <li><a href="#">Account</a></li>
@@ -94,14 +96,7 @@
 
       <aside>
         <div id="me-img">
-          <div
-            style="
-              width: 5rem;
-              height: 5rem;
-              background-color: black;
-              border-radius: 100%;
-            "
-          ></div>
+          <img class="profilepic" src="assets/img/090420.jpg" alt="" srcset="">
         </div>
         <h4>Gusti Bagus Dwi Anugrah Harimurti</h4>
         <blockquote class="bq-profile">
